--- a/курсовая_сайт/views/login.ejs
+++ b/курсовая_сайт/views/login.ejs
@@ -106,7 +106,7 @@ input {
       </div>
       </form>
     </div>
-    <img src="./курсовая_сайт/img/img1.png" class="img_auth">
+    <img src="img/img1.png" class="img_auth">
   </div>
 </body>
 
