--- a/курсовая_сайт/views/register.ejs
+++ b/курсовая_сайт/views/register.ejs
@@ -47,11 +47,11 @@
   }
 
   .button {
-    width: 270px;
-    height: 40px;
+    width: 255px;
+    height: 45px;
     background-color: #C7816C;
     color: white;
-    font-size: 20px;
+    font-size: 22px;
     border-color: none;
     font-weight: 700;
     margin-bottom: 0;
@@ -67,14 +67,6 @@
     margin-bottom: 20px;
 
   }
-
-  .regaut {
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
-    
-  }
-
 
   .reg p a {
     font-size: 20px;
@@ -103,10 +95,7 @@
         <input type="text" id="login" name="login" placeholder="Логин в формате xxx123" required /><br /><br />
         <input type="text" id="name" name="name" placeholder="Имя" required /><br /><br />
         <input type="password" id="password" name="password" placeholder="Пароль" required /><br /><br />
-        <div class="regaut">
-          <input type="submit" value="Зарегистрироваться"  class="button"/>
-          <p><a href="/login">Войти</a></p>
-        </div>
+        <input type="submit" value="Зарегистрировать" class="button" />
       </form>
     </div>
     <img src="/img/img1.png" alt="" class="img_reg">
