--- a/курсовая_сайт/views/profile.ejs
+++ b/курсовая_сайт/views/profile.ejs
@@ -86,6 +86,25 @@
       потребителям с 2000-х годов, а также ассоциативно связанный с KFC благодаря существованию совместного бренда
       «Ростик’с—KFC». Что же касается самого происхождения бренда Rostic's, то он появился от имени основателя
       “Росинтера” - это венесуэльский и российский бизнесмен Ростислав Ордовский-Танаевский Бланко.</p>
+  </div>
+      <footer>
+        <div class="block_fot">
+          <ul>
+            <li class="li_b">Контакты </li>
+            <li>Название компании: ООО “ОренРест” </li>
+            <li>Юр.адрес: 450078, Республика Башкортостан, г. Уфа, ул. Владивостокская д.2</li>
+            <li>Телефон: 13-34-05</li>
+            <li>Email: office@grufa.ru</li>
+          </ul>
+        <ul>
+          <li class="li_b">Реквизиты </li>
+          <li>ИНН: 0278202810</li>
+          <li>КПП: 027801001</li>
+          <li>ОГРН: 1130280050196</li>
+          <li>Организационно-правовая форма: Общество с ограниченной ответственностью</li>
+        </ul>
+      </div>
+      </footer>
 </body>
 
 </html>
