--- a/курсовая_сайт/public/style.css
+++ b/курсовая_сайт/public/style.css
@@ -1,122 +1,177 @@
 body {
-    background-color:  #FFE9E9;
-    display: block;
-  }
-  .header-box {
-    width: 100%;
-    height: 92px;
-    background-color: #9E4A49;
-  }
-  header {
-    display: flex;
-    margin:  0 auto;
-    max-width: 1557px;
-    opacity: 100%;
-    align-items: center;
-    padding-top: 7px;
-  }
-  li {
-    list-style-type: none;
-  }
-  ul {
-    display: flex;
-    margin: 0 auto;
-    width: 855px;
-    justify-content:space-between;
-    font-family: "Jost", serif;
-    font-size: 22px;
-    color: #FFFFFF; 
-    letter-spacing: 1.3px;
-    font-weight: 300;
-  }
-  header a p, header a{
-    font-family: "Jost", serif;
-    font-size: 22px;
-    color: #FFFFFF;
-    letter-spacing: 1.3px;
-    font-weight: 300;
-  }
-  .index_1 {
-    margin: 0 auto;
-    max-width: 1557px;
-    margin-top: 95px;
-    position: relative;
-  }
-  .index_img {
-    position: absolute;
-    z-index: 0;
-    display: flex;
-    margin: 0 auto;
-    max-width: 1557px;
-  }
-  .text_boxin1 {
-    position: absolute;
-    padding-top: 50px;
-    padding-left: 103px;
-  }
-  .text_boxin1 h2 {
-    font-family: "Jost", serif;
-    font-size: 48px;
-    color: #831F1D;
-    letter-spacing: 1.3px;
-    font-weight: 700;
-    margin-bottom: 10px;
-  }
-  h3 {
-    font-family: "Jost", serif;
-    font-size: 32px;
-    color: #831F1D;
-    letter-spacing: 1.3px;
-    font-weight: 400;
-    margin-top: 0;
-    width: 770px;
-    line-height: 40px;
-  }
-  .button_in1 {
-    color: #831F1D;
-    background-color: transparent;
-    width: 397px;
-    height: 57px;
-    border-radius: 50px;
-    font-family: "Jost", serif;
-    font-size: 32px;
-    letter-spacing: 1.3px;
-    font-weight: 400;
-  }
-  .index_2 {
-    display: block;
-    margin:  0 auto;
-    max-width: 1557px;
-    margin-top: 790px;
+  background-color: #FFE9E9;
+  display: block;
+}
 
-  }
-  .index_3 {
-    display: block;
-    margin:  0 auto;
-    max-width: 1557px;
-    margin-top: 100px;
+.header-box {
+  width: 100%;
+  height: 92px;
+  background-color: #9E4A49;
+}
 
-  }
-  .index_2 h2, .index_3 h2 {
-    font-family: "Jost", serif;
-    font-size: 48px;
-    color: #831F1D;
-    letter-spacing: 1.3px;
-    font-weight: 700;
-  }
-  .card1 p, .index_3 p {
-    color: #831F1D;
-    font-family: "Jost", serif;
-    font-size: 24px;
-    letter-spacing: 1.3px;
-    font-weight: 700;
-  }
-  .blocki {
-    display: flex;
-    margin: 0 auto;
-    max-width: 1557px;
-    justify-content: space-between;
+header {
+  display: flex;
+  margin: 0 auto;
+  max-width: 1557px;
+  opacity: 100%;
+  align-items: center;
+  padding-top: 7px;
+}
 
-  }
-  
-  
+li {
+  list-style-type: none;
+}
+
+ul {
+  display: flex;
+  margin: 0 auto;
+  width: 855px;
+  justify-content: space-between;
+  font-family: "Jost", serif;
+  font-size: 22px;
+  color: #FFFFFF;
+  letter-spacing: 1.3px;
+  font-weight: 300;
+}
+
+header a p,
+header a {
+  font-family: "Jost", serif;
+  font-size: 22px;
+  color: #FFFFFF;
+  letter-spacing: 1.3px;
+  font-weight: 300;
+}
+
+.index_1 {
+  margin: 0 auto;
+  max-width: 1557px;
+  margin-top: 95px;
+  position: relative;
+}
+
+.index_img {
+  position: absolute;
+  z-index: 0;
+  display: flex;
+  margin: 0 auto;
+  max-width: 1557px;
+}
+
+.text_boxin1 {
+  position: absolute;
+  padding-top: 50px;
+  padding-left: 103px;
+}
+
+.text_boxin1 h2 {
+  font-family: "Jost", serif;
+  font-size: 48px;
+  color: #831F1D;
+  letter-spacing: 1.3px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+h3 {
+  font-family: "Jost", serif;
+  font-size: 32px;
+  color: #831F1D;
+  letter-spacing: 1.3px;
+  font-weight: 400;
+  margin-top: 0;
+  width: 770px;
+  line-height: 40px;
+}
+
+.button_in1 {
+  color: #831F1D;
+  background-color: transparent;
+  width: 397px;
+  height: 57px;
+  border-radius: 50px;
+  font-family: "Jost", serif;
+  font-size: 32px;
+  letter-spacing: 1.3px;
+  font-weight: 400;
+}
+
+.index_2 {
+  display: block;
+  margin: 0 auto;
+  max-width: 1557px;
+  margin-top: 790px;
+
+}
+
+.index_3 {
+  display: block;
+  margin: 0 auto;
+  max-width: 1557px;
+  margin-top: 100px;
+
+}
+
+.index_2 h2,
+.index_3 h2 {
+  font-family: "Jost", serif;
+  font-size: 48px;
+  color: #831F1D;
+  letter-spacing: 1.3px;
+  font-weight: 700;
+}
+
+.card1 p,
+.index_3 p {
+  color: #831F1D;
+  font-family: "Jost", serif;
+  font-size: 24px;
+  letter-spacing: 1.3px;
+  font-weight: 700;
+}
+
+.blocki {
+  display: flex;
+  margin: 0 auto;
+  max-width: 1557px;
+  justify-content: space-between;
+
+}
+
+footer {
+  display: flex;
+  margin: 0 auto;
+  width: 100%;
+  height: 238px;
+  background-color: #9E4A49;
+}
+.index_3 {
+  margin-bottom: 180px;
+}
+.block_fot {
+  display: flex;
+  max-width: 1557px;
+  margin: 0 auto;
+  justify-content: space-between;
+  gap: 400px;
+}
+
+.block_fot ul {
+  display: block;
+  margin: 0 auto;
+  width: 588px;
+  font-family: "Jost", serif;
+  font-size: 22px;
+  color: #FFFFFF;
+  letter-spacing: 1.3px;
+  font-weight: 300;
+}
+
+.li_b {
+  font-family: "Jost", serif;
+  font-size: 24px;
+  padding-top: 20px;
+  color: #FFFFFF;
+  letter-spacing: 1.3px;
+  font-weight: 500;
+}
