--- a/курсовая_сайт/views/register.ejs
+++ b/курсовая_сайт/views/register.ejs
@@ -81,6 +81,45 @@
     position: absolute;
     margin-left: 750px;
   }
+  .header-box {
+  width: 100%;
+  height: 92px;
+  background-color: #9E4A49;
+}
+
+header {
+  display: flex;
+  margin: 0 auto;
+  max-width: 1557px;
+  opacity: 100%;
+  align-items: center;
+  padding-top: 7px;
+}
+
+li {
+  list-style-type: none;
+}
+
+ul {
+  display: flex;
+  margin: 0 auto;
+  width: 855px;
+  justify-content: space-between;
+  font-family: "Jost", serif;
+  font-size: 22px;
+  color: #FFFFFF;
+  letter-spacing: 1.3px;
+  font-weight: 300;
+}
+
+header a p,
+header a {
+  font-family: "Jost", serif;
+  font-size: 22px;
+  color: #FFFFFF;
+  letter-spacing: 1.3px;
+  font-weight: 300;
+}
 </style>
 
 <head>
@@ -88,6 +127,25 @@
 </head>
 
 <body>
+  <div class="header-box">
+    <header>
+      <img src="/img/logo.png" alt="">
+      <ul>
+        <a href="/table">
+          <li>Таблицы</li>
+        </a>
+        <a>
+          <li>Статистика</li>
+        </a>
+        <a>
+          <li>Новости</li>
+        </a>
+        <a>
+          <li>Коммуникации</li>
+        </a>
+      </ul>
+      <a href="/logout">Выйти</a>
+  </div>
   <div class="reg">
     <div class="reg_block">
       <h1>Регистрация</h1>
