--- a/курсовая_сайт/views/profile.ejs
+++ b/курсовая_сайт/views/profile.ejs
@@ -33,7 +33,7 @@
         <a href="/logout">Выйти</a>
         <% if (user) { %>
           <% if (user.role==='admin' ) { %>
-            <a href="/register">/Админ-панель</a class="adm">
+            <a href="/register">/Админ-панель</a>
             <% } %>
               <% } else { %>
                 <p>Пожалуйста, авторизуйтесь.</p>
