--- a/курсовая_сайт/views/table.ejs
+++ b/курсовая_сайт/views/table.ejs
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
+      <link rel="stylesheet" href="/style-admin.css">
     <title>Таблицы</title>
 </head>
 <body>
-    
+    <div class="header-box">
+        <header>
+          <img src="/img/logo.png" alt="">
+          <ul>
+            <a>
+              <li>Таблицы</li>
+            </a>
+            <a>
+              <li>Статистика</li>
+            </a>
+            <a>
+              <li>Новости</li>
+            </a>
+            <a>
+              <li>Коммуникации</li>
+            </a>
+          </ul>
+          <a href="/logout">Выйти</a>
+      </div>
 </body>
 </html>
