--- a/курсовая_сайт/views/register.ejs
+++ b/курсовая_сайт/views/register.ejs
@@ -19,9 +19,8 @@
     <header>
       <img src="/img/logo.png" alt="">
       <ul>
-        <a href="">
-          <li>Таблицы</li>
-        </a>
+        <a href="/table">
+          <li>Таблицы</li></a>
         <a>
           <li>Статистика</li>
         </a>
@@ -30,6 +29,9 @@
         </a>
         <a>
           <li>Коммуникации</li>
+        </a>
+        <a>
+          <li>Регистрация</li>
         </a>
       </ul>
       <a href="/logout">Выйти</a>
