--- a/курсовая_сайт/views/table.ejs
+++ b/курсовая_сайт/views/table.ejs
@@ -31,15 +31,12 @@
               <li>Таблицы</li>
             </a>
             <a>
-              <li>Статистика</li>
-            </a>
-            <a>
               <li>Новости</li>
             </a>
             <a>
               <li>Коммуникации</li>
             </a>
-            <a>
+            <a href="/register">
               <li>Регистрация</li>
             </a>
           </ul>
@@ -50,10 +47,10 @@
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Login</th>
-                <th>Name</th>
-                <th>Password</th>
-                <th>Role</th>
+                <th>Логин</th>
+                <th>Имя</th>
+                <th>Пароль</th>
+                <th>Роль</th>
             </tr>
         </thead>
         <tbody>
