--- a/курсовая_сайт/views/table.ejs
+++ b/курсовая_сайт/views/table.ejs
@@ -56,6 +56,20 @@
         </tbody>
     </table>
 
+    <h1>Коммуникации</h1>
+    <table id="communicationsTable" border="1">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Название</th>
+                <th>Дата</th>
+                <th>Тег</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+
     <script>
         fetch('/users')
             .then(response => response.json())
