--- a/курсовая_сайт/views/communication.ejs
+++ b/курсовая_сайт/views/communication.ejs
@@ -101,16 +101,16 @@
         <p>Архив коммуникаций</p>
     </div>
     <div class="com">
-        <div class="reg_block">
+        <div class="commun_block">
             <h1>Остались вопросы?</h1>
-            <form method="post" action="/register">
-                <input type="text" id="login" name="login" placeholder="Имя" required /><br /><br />
-                <input type="text" id="name" name="name" placeholder="Email" required /><br /><br />
-                <input type="password" id="password" name="password" placeholder="Ваш вопрос" required /><br /><br />
+            <form method="post" action="/feedbacks">
+                <input type="text" id="name" name="name" placeholder="Имя" required /><br /><br />
+                <input type="text" id="email" name="email" placeholder="Email" required /><br /><br />
+                <input type="text" id="question" name="question" placeholder="Ваш вопрос" required /><br /><br />
                 <input type="submit" value="Оставить заявку" class="button" />
             </form>
         </div>
-        <img src="/img/img2.png" alt="" class="img_reg">
+        <img src="/img/img2.png" alt="" class="img_comm">
     </div>
     <footer>
         <div class="block_fot">
