--- a/курсовая_сайт/views/login.ejs
+++ b/курсовая_сайт/views/login.ejs
@@ -8,7 +8,7 @@
   rel="stylesheet">
 <style>
   body {
-    background-color: antiquewhite;
+    background-image: ("/img/fri.png");
   }
 
   .auth {
